Fix tag wrapping on notes page

--- a/src/Pages/NotesPage/NotesPage.scss
+++ b/src/Pages/NotesPage/NotesPage.scss
@@ -88,8 +88,9 @@
 			display: flex;
 			align-items: center;
 			justify-content: flex-start;
+			flex-wrap: wrap;
 			// gap: 1em;
-			& > * { @include h-gap(1em); }
+			// & > * { @include h-gap(1em); }
 
 			.notes-filter-text {
 				font-size: 1.25em;
@@ -100,6 +101,7 @@
 			.notes-filter-tag {
 				font-size: 1em;
 				padding: 0.25em 0.5em;
+				margin: 0.25em 0.5em;
 	
 				background-color: $aqua-medium;
 				color: $light;
